--- a/src/app/components/carousel/carousel.scss
+++ b/src/app/components/carousel/carousel.scss
@@ -1,9 +1,9 @@
-$fontSize: 14px;
 $fontWeight: 600;
 $innerCircle: 5;
 $outerCircle: $innerCircle * 3;
 $borderThickness: 1;
 $calculatedPadding: $innerCircle - $borderThickness;
+$fontSize: $outerCircle - 1 ;
 
 @function getPixel($property) {
     @return $property + px;
@@ -15,50 +15,31 @@ $calculatedPadding: $innerCircle - $borderThickness;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        .left {
+        .action {
             border: none;
             background: transparent;
-            font-size: $fontSize;
+            font-size: getPixel($fontSize);
             font-weight: $fontWeight;
             cursor: pointer;
-
-            &:disabled {
-                cursor: default;
-            }
-        }
-        .right {
-            border: none;
-            background: transparent;
-            font-size: $fontSize;
-            font-weight: $fontWeight;
-            cursor: pointer;
+            padding: 0;
 
             &:disabled {
                 cursor: default;
             }
         }
         .item {
-            height: getPixel($innerCircle);
-            width: getPixel($innerCircle);
-            background: #ffffff;
-            border-radius: 50%;
-            padding: 0px;
-            border: none;
-            cursor: pointer;
-            margin-top: 5px;
-        }
-        .item-current {
             height: getPixel($outerCircle);
             width: getPixel($outerCircle);
             border-radius: 50%;
             background: transparent;
-            border: getPixel($borderThickness) solid;
+            border: getPixel($borderThickness) solid transparent;
             padding: getPixel($calculatedPadding);
+            cursor: pointer;
+            
             .label {
                 display: block;
                 height: getPixel($innerCircle);
                 width: getPixel($innerCircle);
-                background: #ffffff;
                 border-radius: 50%;
             }
         }
